Add few missing classes to index.html and add style.css file

--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
             <img class="product-image" src="assets/Product-1.jpeg" alt="image of skiing goggles">
             <div class="product-info-wrapper">
                 <p class="product-info">XRD 20 <br>$159</p>
-                <a href="#/product1"><img src="assets/Arrow.svg" alt=""></a>
+                <a id="arrow" href="#/product1"><img src="assets/Arrow.svg" alt=""></a>
             </div>
         </div>
         <div class="card">
             <img class="product-image" src="assets/Product-1.jpeg" alt="image of skiing goggles">
             <div class="product-info-wrapper">
                 <p class="product-info">XRD 20 <br>$159</p>
-                <a href="#/product1"><img src="assets/Arrow.svg" alt=""></a>
+                <a id="arrow" href="#/product1"><img src="assets/Arrow.svg" alt=""></a>
             </div>
         </div>
         <div class="card">
             <img class="product-image" src="assets/Product-1.jpeg" alt="image of skiing goggles">
             <div class="product-info-wrapper">
                 <p class="product-info">XRD 20 <br>$159</p>
-                <a href="#/product1"><img src="assets/Arrow.svg" alt=""></a>
+                <a id="arrow" href="#/product1"><img src="assets/Arrow.svg" alt=""></a>
             </div>
         </div>
     </div>
